fix footer spacing on dark mode

--- a/portfolio/src/styles/layout/footer.scss
+++ b/portfolio/src/styles/layout/footer.scss
@@ -89,7 +89,7 @@
     margin-right: 2rem;
 
     @include medium {
-      margin-left: none;
+      margin-left: 0;
     }
   }
 
